Fixed alignment issue with tables and advancement page
text-align doesn't affect tables, instead you have to
use margins.

Image on advancement page had a left align that was removed.

--- a/content/corpstyle.css
+++ b/content/corpstyle.css
@@ -96,3 +96,11 @@ a:hover, a:active {
   margin: auto;
   text-align: center;
 }
+
+#content table,
+.content table,
+#header table,
+#nave-bottom table{
+  margin-left: auto;
+  margin-right: auto;
+}
